fixing spacing for iphone compatibility

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@ body{
   background-image: url('https://cutewallpaper.org/25/animated-tech-white-wallpaper/white-f1178-technology-3663a-wallpapers-2702d-on-d2bf8-wallpaperdog.png');
   background-repeat: no-repeat;
   background-color:#ecebeb;
-   -webkit-text-size-adjust: none; 
+  -webkit-text-size-adjust: none; 
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 #header{
   display: flex;
@@ -418,10 +419,7 @@ transform: scale(1.2);
   }
 
   @media screen and (max-width: 570px){
-    #projectsContainer{
-      align-items: center;
-      -webkit-align-items: center;
-    }
+ 
     #intro{
       font-size: 23px;
       margin-left: 0; 
@@ -530,6 +528,9 @@ transform: scale(1.2);
       -webkit-height:300vh;
       justify-content: center;
       -webkit-justify-content: center;
+      align-items: center;
+      -webkit-align-items: center;
+
     }
     
     #projectTitle{
